fixed jumping scroll on carousel click

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,7 @@ body, html, .main {
 
 section {
     min-height: 100%;
+    padding: 70px 0;
 }
 
 .navbar-brand > img {
